--- a/Module2 Homework-by Dwayne McKie.ipynb
+++ b/Module2 Homework-by Dwayne McKie.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -91,13 +91,13 @@
       ">99\n",
       " \n",
       "The secret code is: \n",
-      "13\n",
-      "17\n",
-      "50\n",
-      "91\n",
-      "51\n",
+      "42\n",
+      "12\n",
+      "48\n",
+      "87\n",
+      "84\n",
       "93\n",
-      "131750915193\n"
+      "42\t12\t48\t87\t84\t93\n"
      ]
     }
    ],
@@ -140,7 +140,7 @@
     "print(code4)\n",
     "print(code5)\n",
     "print(code6)\n",
-    "print(f\"{code1}{code2}{code3}{code4}{code5}{code6}\")"
+    "print(f\"{code1}\\t{code2}\\t{code3}\\t{code4}\\t{code5}\\t{code6}\")"
    ]
   },
   {
